@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e69878c76b739b5ed58a4dc48ccad06e22eb8932 ChangeLog
+SHA1 28f99f700908d145a26074e50330e4f874e25966 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 b8771dbe1304db7f33b6fd12d18172ab2684e768 META.yml
-SHA1 ba667ea699d30d23095a654500b9e5c63944b622 MYMETA.json
-SHA1 f9083cfbb4c925f94f215341ee3a1227603ec4f3 MYMETA.yml
-SHA1 eae4b2fb5a315bb547ebddebf71b5ce9a23f9020 Makefile.PL
+SHA1 54b826d4419673dc07ddd6623c31a8d620ef6bd6 META.yml
+SHA1 e77b248080d1337fe4fe784eed76fa338c34fb15 MYMETA.json
+SHA1 3fff365365d62bbfd8df13499b1ae8eaf5f4d6b9 MYMETA.yml
+SHA1 682b50f98569d33352cdfc3a4425e356078569b5 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 f550935f9f7d48c4201c01c61c995600d942d70c lib/Net/FullAuto.pm
+SHA1 dfa8270f833998f4a09a398f038721640ed05357 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSkjQkAAoJEBa/9Pad787EhSYH+wX1PS6GfiGGOo3MGobipbqv
-DT8KB9virHLcFB3q5/F4N82fLvJ32Vma+y1n/EDYm9V4OdRIY5OPxxepF0zcFrti
-4fpzqZ9ot2s05wlYyTUI5i2+BOillTnen8ynqMqqEKB/xWRQ6KdI+mbsLtQIxM6G
-e823vvZPRg6/24zuzpUucxw7eTk2j8u9INbv7VrWqAn0ec4+oZJS4nAnph5UD4yC
-Fe1zl0NM89yegwPShQCIOpbpg5/6Abe6e+7IycP0J7gDOmCeDoc5xxU1OeAM3jcK
-hQb4oV17Vvi8jEFFHvXlZwdyrFJYUvLKkyA58X2uRLPPih8gu8wf1w566ghJqOk=
-=gGsZ
+iQEcBAEBAgAGBQJSk3rAAAoJEBa/9Pad787EQKsIAN1Qfkk2mKYiLuXPzFmfazit
+lVosfzQi+L97RJ7zeDBHkagPTlGcb73OFH98JRn3tujiPzz0YjgwHezMa/xxmARs
+f1CwzxkCsR/+MutgcoaAz/G3UrBeeTZ2NekCPjUd4bMVd7K4HvmKDaRP/xdkBM8h
+YU9QfIMsdSC9jcuWCjjN7pB7725aR7O1qYItS6SnOjcLVimBDQUCNeKRicmsG9um
+GTdKB0khan7XbT83ZQjJvJc7DML9p8xrgCjKVlqCA+V+nIB5fZBQ007F0Dgg4bMJ
+H/eL/q7NKSFsmoZWhjvZ+d2eBK8Iqeewvcyw51pILvTg7kE7Kbq79+ugMQZSh2U=
+=h7Sg
 -----END PGP SIGNATURE-----
