@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999939';
+our $VERSION='0.99999940';
 
 
 use 5.005;
